# creditflow-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/config/: models.py
app/core/: __init__.py  config.py  logging.py
app/utils/: mlflow_logger.py
docker/: Dockerfile
scripts/: test_config.py  test_loader.py  test_logging.py  test_pipeline.py  test_validator.py
tests/: test_base_model.py  test_evaluator.py  test_healthy.py  test_loader.py  test_logistic.py  test_pipeline.py  test_preprocess_pipeline.py  test_validator.py
training/data/: exceptions.py  load_data.py  loader.py
training/evaluation/: __init__.py  evaluator.py  metrics.py  plots.py
training/feature_engineering/: features.py  pipeline.py
training/pipelines/: preprocess.py  split.py  train.py
training/preprocessing/: validate.py
