[project]
name = "creditflow-ai"
version = "0.1.0"
description = "Production-grade end-to-end MLOps pipeline for credit default prediction using FastAPI, scikit-learn, and MLflow."
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    # API
    "fastapi==0.139.0",
    "uvicorn==0.38.0",

    # Configuration
    "pydantic-settings==2.11.0",
    "python-dotenv==1.1.1",

    # Data
    "numpy==2.3.2",
    "pandas==2.3.1",
    "pyarrow==21.0.0",

    # Machine Learning
    "scikit-learn==1.7.1",
    "joblib==1.5.1",

    # Experiment Tracking
    "mlflow==3.14.0",

    # Visualization
    "matplotlib==3.10.5",
]

[dependency-groups]
dev = [
    "black==25.1.0",
    "httpx==0.28.1",
    "mypy==1.17.1",
    "pre-commit==4.3.0",
    "pytest==8.4.1",
    "ruff==0.12.7",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false

[tool.setuptools]
packages = ["app", "training"]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"
